# Treelint

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  claude.sh
.claude/: BASH-APPROVAL-QUICK-START.md  README.md  SUBAGENT-DESIGN-GUIDE.md  hooks.yaml  settings.json  system-prompt-core.md
.claude/agents/: ac-compliance-verifier.md  agent-generator.md  anti-pattern-scanner.md  api-designer.md  architect-reviewer.md  backend-architect.md  code-analyzer.md  code-quality-auditor.md  code-reviewer.md  context-preservation-validator.md  context-validator.md  coverage-analyzer.md  deferral-validator.md  dependency-graph-analyzer.md  deployment-engineer.md  dev-result-interpreter.md  documentation-writer.md  file-overlap-detector.md  framework-analyst.md  frontend-developer.md  git-validator.md  git-worktree-manager.md  ideation-result-interpreter.md  integration-tester.md  internet-sleuth.md  observation-extractor.md  pattern-compliance-auditor.md  qa-result-interpreter.md  refactoring-specialist.md  requirements-analyst.md  security-auditor.md  session-miner.md  sprint-planner.md  stakeholder-analyst.md  story-requirements-analyst.md  tech-stack-detector.md  tech-stack-detector.md.backup-20251225-211624  technical-debt-analyzer.md  test-automator.md  ui-spec-formatter.md
.claude/commands/: audit-budget.md  audit-hooks.md  chat-search.md  create-epic.md  create-story.md  create-ui.md  devforgeai-validate.md  feedback-export-data.md  feedback-search.md  import-feedback.md  insights.md  recommendations-triage.md  review-qa-reports.md  setup-github-actions.md  validate-stories.md
.claude/hooks/: README.md  post-epic-create.sh  post-qa-debt-detection.sh  post-story-create.sh  pre-epic-create.sh  pre-story-create.sh  pre-tool-use.sh  test-rec-02.sh
.claude/memory/: MIGRATION-SUMMARY.md  ac-tracking-clarification.md  best-practices.md  command-pattern-compliance.md  commands-reference.md  context-files-guide.md  documentation-command-guide.md  effective-prompting-guide.md  epic-creation-guide.md  git-operations-policy.md  parallel-orchestration-guide.md  qa-automation.md  questions.md  skill-execution-troubleshooting.md  skills-reference.md  subagents-reference.md  token-budget-guidelines.md  token-efficiency.md  ui-generator-guide.md
.claude/references/: changelog-update-guide.md
.claude/rules/: README.md
.claude/scripts/: README.md  check-hooks-fast.sh  coverage.json  devforgeai-validate  install_hooks.sh  invoke_feedback_hooks.sh  migrate-ac-headers.sh  plan_file_kb.sh  requirements.txt  session_catalog.sh  setup.py  start-devforgeai.sh  validate_deferrals.py
.treelint/: index.db-shm
benches/: output_benchmarks.rs
devforgeai/: .version.json  technical-debt-register.md  version.json
devforgeai/RCA/: RCA-001-epic-technical-specification-gaps.md
devforgeai/config/: MIGRATION.md  README.md  TROUBLESHOOTING.md  feedback.schema.json  feedback.yaml  hooks.yaml  hooks.yaml.example  hooks.yaml.example-release  parallel-orchestration.yaml  parallel.schema.json  pre-phase-planning.schema.json  pre-phase-planning.yaml  qa-remediation.yaml  release-config.sh  test-isolation.yaml  upgrade-config.json  validation-call-locations.yaml  workflow-subagents.yaml
devforgeai/deployment/: config.json  registry-config.schema.json  registry-config.yaml
devforgeai/docs/: EXTERNAL-PROJECT-SETUP-GUIDE.md  FRAMEWORK-MAINTAINER-GUIDE.md  INVOKE-HOOKS-INTEGRATION-GUIDE.md  INVOKE-HOOKS-TROUBLESHOOTING.md  STORY-SCOPED-COMMITS.md  UNINSTALL-RECOVERY-GUIDE.md  UNINSTALL-USAGE-GUIDE.md  adaptive-questioning-algorithm.md  adaptive-questioning-config.md  config-schema-reference.md  developer-guide-operation-types.md  hook-integration-pattern.md  qa-hook-integration-guide.md  question-bank-schema.yaml  release-hooks-troubleshooting.md  selection-context-schema.json  selection-rationale-examples.md  (+3 more)
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  (+1 more)
tests/: story_001.rs  story_002.rs  story_003.rs  story_004.rs  story_005.rs  story_006.rs  story_007.rs  story_008.rs  story_009.rs  story_010.rs  story_011.rs  story_012.rs
(+1028 files in other folders)
