[package]
name = "treelint"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "AST-aware code search CLI for AI coding assistants"
authors = ["Treelint Contributors"]
license = "MIT"
repository = "https://github.com/treelint/treelint"
keywords = ["ast", "search", "tree-sitter", "cli", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI Framework (per dependencies.md)
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization (per dependencies.md)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling (per dependencies.md)
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing (per dependencies.md)
pretty_assertions = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "treelint"
path = "src/main.rs"
