[package]
name = "treelint"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "AST-aware code search CLI for AI coding assistants"
authors = ["Treelint Contributors"]
license = "MIT"
repository = "https://github.com/treelint/treelint"
keywords = ["ast", "search", "tree-sitter", "cli", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI Framework (per dependencies.md)
clap = { version = "4.5", features = ["derive", "cargo"] }

# tree-sitter Parsing (per dependencies.md)
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-md = "0.2"

# Serialization (per dependencies.md)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling (per dependencies.md)
thiserror = "1.0"
anyhow = "1.0"

# Database (per dependencies.md)
rusqlite = { version = "0.31", features = ["bundled"] }

# Regex (per dependencies.md)
regex = "1.10"

# File System (per dependencies.md)
walkdir = "2.5"

# Terminal UI (per dependencies.md)
indicatif = "0.17"
colored = "2.1"

# TTY Detection (per dependencies.md)
atty = "0.2"

[dev-dependencies]
# Testing (per dependencies.md)
pretty_assertions = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# Benchmarking (per dependencies.md)
# Using 0.4 for Rust 1.75 compatibility (0.5 requires Rust 1.81+)
criterion = { version = "0.4", features = ["html_reports"] }

[[test]]
name = "story_002"
path = "tests/story_002_tests/mod.rs"

[[test]]
name = "story_004"
path = "tests/story_004.rs"

[[test]]
name = "story_005"
path = "tests/story_005.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "treelint"
path = "src/main.rs"

[[bench]]
name = "output_benchmarks"
harness = false
